# iot-environmental-monitor

./: .clang-format  .gitignore  .gitmodules  .markdownlint.jsonc  README.md  cppcheck-suppressions.txt  cppcheck-suppressions.xml  project_status.md
.github/workflows/: ci.yml
design/: diagram-colour-palette.md  iot_monitor.vpp  memory layout.drawio
docs/: SRS.md  architecture-principles.md  bom.md  coding-standard.md  diagram-colour-palette.md  domain-model.md  hardware-setup-guide.md  use-case-descriptions.md  use-case-elicitation.md  vision.md
docs/dev-tools/: bug-log.md  claude-code-module-prompt.md  implementation-roadmap.md  project-status.md
docs/dev-tools/config_service/: exercise.md  session-report.md
docs/dev-tools/config_store/: bug-log.md  exercise.md  session-report.md
docs/dev-tools/console_service/: bug-log.md  exercise.md  session-report.md
docs/dev-tools/cpu/: exercise.md  session-report.md
docs/dev-tools/graphics_library/: bug-log.md  exercise.md  session-report.md
docs/dev-tools/i2c-driver/: bug-log.md  session-report.md
docs/dev-tools/interview-tests/: config_store-test.md  i2c-driver-test.md  simulated-sensor-drivers-test.md
docs/dev-tools/lcd_driver/: bug-log.md  exercise.md  session-report.md
docs/hld/: components.md  flash-partition-layout.md  hld.md  modbus-register-map.md  sequence-diagrams.md  state-machines.md  task-breakdown.md
docs/lcd-ui-design/: README.md  active-alarms.html  component-inventory.md  configuration.html  navigation-map.md  sensor-readings.html  sensor-trend.html  splash.html  style-guide.md  system-status.html
docs/lld/: lld-methodology.md  lld.md
firmware/field-device/: .cproject  .project  STM32F469NIHX_FLASH.ld  STM32F469NIHX_RAM.ld
firmware/gateway/: .cproject  .project  STM32L475VGTX_FLASH.ld  STM32L475VGTX_RAM.ld
firmware/shared/: firmware_version.h.in  status.h
scripts/: check-hal-encapsulation.sh  fix_companion_headers.py  fix_lld_headings.py  fix_open_items_format.py  gate_review_check.py  gen-version.py  lld_gate_review_check.py  script_minimalmodbus.py  test-module-usage.txt  test-module.ps1
simulator/lcd-ui/: CMakeLists.txt  Dockerfile  Makefile  README.md  main.c  sdl_backend.c  sdl_backend.h  sim_providers.c
tests/: README.md  project.yml
tests/example/: test_example.c
tests/mocks/: stm32_cmsis_mock.c  stm32_cmsis_mock.h  stm32f469xx.h  stm32l475_cmsis_mock.c  stm32l475_cmsis_mock.h  stm32l475xx.h
tests/support/: FreeRTOS.h  alarm_service_stub.h  barometer_driver_stub.h  config_service_stub.h  config_store_stub.h  console_service_stub.h  cpu_driver.h  debug_uart_stub.h  driver_stubs.h  freertos_mock.c  freertos_mock.h  gpio_driver_stub.h  graphics_library_stub.h  health_monitor_stub.h  humidity_temp_driver_stub.h  i2c_driver_f4.h  i2c_driver_l4.h  lcd_driver_stub.h  lcd_ui_stub.h  led_driver_stub.h  lifecycle_gw_deps.h  lvgl_stub.c  lvgl_stub.h  modbus_slave_iface_stub.h  modbus_uart_driver_stub.h  mrm_deps_stub.h  queue.h  rtc_driver_stub.h  semphr.h  sensor_service_stub.h  task.h  timers.h  touchscreen_driver_stub.h
tools/: check-traceability.py
(+247 files in other folders)
